# Ftrain

./: Dockerfile  LICENSE  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
docs/: mkdocs.yaml
ftrain/: __init__.py
ftrain/callbacks/: __init__.py  callbacks.py
ftrain/datamodules/: __init__.py  fashion_mnist.py  mnist.py
ftrain/loggers/: loggers.py
ftrain/networks/: __init__.py
ftrain/networks/models/: __init__.py  residual_classifier.py  test_residual_classifier.py
ftrain/networks/recurrent/: __init__.py  predictive_lstm.py  test_predictive_lstm.py
ftrain/networks/recurrent/lstm_cells/: __init__.py  base_gate.py  prediction_lstm_cell.py  test_base_gate.py  test_prediction_lstm_cell.py
ftrain/networks/residuals/: __init__.py  preactivated_residuals.py  residual.py  test_preactivated_residual.py  test_residual.py
ftrain/profilers/: __init__.py  profiler.py
ftrain/templates/: __init__.py  adda.py  simple.py  wgan_gp.py
tests/: ftrain_test.py
tests/scenarios/: conftest.py
tests/scenarios/steps/: simple_calculation_test.py
