[tool.poetry]
name = "ftrain"
version = "0.1.0"
description = "Pytorch Lightning Convinence Library"
authors = ["Nischal Bhattarai <nischalbhattaraipi@gmail.com>"]
maintainers = ["Nischal Bhattarai <nischalbhattaraipi@gmail.com>"]
license = "MIT"
repository = "https://github.com/NischalPI/ftrain"
documentation = "https://github.com/NischalPI/ftrain/tree/main/docs/api/"
readme = "README.md"
packages = [
    { include = "ftrain" },
]

[tool.poetry.dependencies]
python = ">=3.8"

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.18.1"
black = {version = "^22.3.0", allow-prereleases = true}
xdoctest = "^1.0.0"
poethepoet = "^0.16.4"
ruff = "^0.0.253"
pytest = "7.1.1"
pytest-html = "^3.1.1"
pytest-sugar = "^0.9.6"
pytest-reverse = "^1.5.0"
pytest-cov = "^3.0.0"
pytest-bdd = "^6.1.1"
mkdocs = "^1.4.2"
mkdocs-material = "^8.5.10"
mkdocs-gen-files = "^0.4.0"
mkdocs-awesome-pages-plugin = "^2.8.0"
mkapi = "^1.0.14"

[tool.poetry.scripts]
-c = "poethepoet:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
target-version = ['py310']
include = '\.pyi?$'

[tool.ruff]
ignore = ["E501", "ANN002", "ANN101", "S101","ANN003"]
line-length = 79
select = [
    "C9",
    "E",
    "F",
    "W",
    "D",
    "G",
    "A",
    "PT",
    "S",
    "B",
    "ANN",
    "SIM",
    "I",
    "N",
]

exclude = ['test_*.py']

ignore-init-module-imports = true



[tool.ruff.mccabe]
max-complexity = 10

[tool.ruff.pydocstyle]
convention = "google"

[tool.ruff.per-file-ignores]
"tests/*" = ["S101"]
"__init__.py" = ["F401"]

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "tests",
    "ftrain"
]
python_files = ["test_*.py"]
python_functions = ["test_*"]
