[tool.poetry]
name = "ftrain"
version = "0.1.0"
description = "Pytorch Lightning Convinence Library"
authors = ["Nischal Bhattarai <nischalbhattaraipi@gmail.com>"]
maintainers = ["Nischal Bhattarai <nischalbhattaraipi@gmail.com>"]
license = "MIT"
repository = "https://github.com/NischalPI/ftrain"
documentation = "https://github.com/NischalPI/ftrain/tree/main/docs/api/"
readme = "README.md"
packages = [
    { include = "ftrain" },
]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
torch = "^2.0.0"
pytorch_lightning = "^2.0.0"
torchvision = "^0.15.1"
torchmetrics = "^1.0.0"

[tool.poetry.group.dev.dependencies]
black = {version = "^22.3.0", allow-prereleases = true}
ruff = "^0.0.253"
pytest = "7.1.1"
pytest-html = "^3.1.1"
pytest-sugar = "^0.9.6"
pytest-reverse = "^1.5.0"
pytest-cov = "^3.0.0"
pytest-bdd = "^6.1.1"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
select =["E", "F", "I", "UP", "ANN", "ARG", "D", "RET", "TCH"]
exclude = ["tests", "docs", "*test_*"]
src =['./ftrain']
# Ignore long lines and self annotations 
ignore =['ANN101', 'E501', 'ANN002', 'ANN003']

[tool.ruff.per-file-ignores]
"__init__.py" = ["E402", "F401"]

[tool.ruff.flake8-quotes]
docstring-quotes = "double"

[tool.ruff.pydocstyle]
convention = "google"


[tool.black]
use-single-quotes = false
line-length = 88
skip-string-normalization = true
target-version = ["py310"]

[tool.black.paths]
include = ["./ftrain"]

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "ftrain"
]
python_files = ["test_*.py"]
python_functions = ["test_*"]
